--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,159 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Play&display=swap");
+
+* {
+    font-family: "Play", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* GLOBAL */
+
+li,
+a {
+    text-decoration: none;
+}
+.card {
+    border-radius: 0px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    -ms-border-radius: 0px;
+    -o-border-radius: 0px;
+}
+.text-orange {
+    color: #fd7e14;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.carousel-indicators {
+    margin: 0px;
+    height: 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.carousel-indicators ol {
+    width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.carousel-indicators li {
+    height: 3px !important;
+    border-radius: 0px !important;
+    width: 25%;
+    -webkit-border-radius: 0px !important;
+    -moz-border-radius: 0px !important;
+    -ms-border-radius: 0px !important;
+    -o-border-radius: 0px !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media only screen and (min-width: 993px) {
+    .nav-item > .nav-link {
+        padding: 5px 20px !important;
+        display: block !important;
+    }
+
+    .nav-link {
+        margin-bottom: -21px;
+    }
+    .nav-link::after {
+        content: "";
+        display: block;
+        width: 0px;
+        height: 2.3px;
+        margin-top: 22px;
+        background: rgb(3, 169, 244);
+        background: linear-gradient(
+            142deg,
+            rgba(3, 169, 244, 1) 0%,
+            rgba(70, 140, 222, 1) 13%,
+            rgba(194, 86, 181, 1) 83%
+        );
+        transition: 0.4s;
+        -webkit-transition: 0.4s;
+        -moz-transition: 0.4s;
+        -ms-transition: 0.4s;
+        -o-transition: 0.4s;
+    }
+
+    .nav-link:hover::after {
+        width: 100%;
+    }
+
+    .navbar-nav .nav-link:hover {
+        color: black;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .nav-item > .nav-link {
+        color: black !important;
+    }
+    .header-inner {
+        background-color: #fff !important;
+    }
+    .content-banner .first-title {
+        font-size: 30px !important;
+    }
+
+    .navbar-nav {
+        align-items: center;
+    }
+    #about .container {
+        padding: 1rem 3rem;
+    }
+}
+
+/* NAVBAR */
+
+.header-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 99;
+    background-color: rgba(255, 255, 255, 0.829);
+    backdrop-filter: blur(20px);
+}
+
+.logo {
+    position: absolute;
+    top: 0;
+}
+
+.nav-item .nav-link {
+    display: block;
+    text-transform: capitalize;
+    font-size: 16px;
+    font-weight: 500;
+    color: black;
+    transition: 0.15s;
+    -webkit-transition: 0.15s;
+    -moz-transition: 0.15s;
+    -ms-transition: 0.15s;
+    -o-transition: 0.15s;
+}
+
+.navbar-scroll {
+    background-color: #f3f4f5;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    z-index: 99;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.4);
+    transition-duration: 0.6s;
+}
+
+.navbar-scroll .nav-item .nav-link {
+    color: black;
+}
+
+.footer .border-footer {
+    width: 100%;
+    margin-top: 20px;
+    height: 5px;
+    background: rgb(3, 169, 244);
+    background: linear-gradient(
+        142deg,
+        rgba(3, 169, 244, 1) 0%,
+        rgba(70, 140, 222, 1) 13%,
+        rgba(194, 86, 181, 1) 83%
+    );
+}
+
+.App-bg-content {
+    background: #f2f2f2;
 }
