--- a/src/component/button/Button.scss
+++ b/src/component/button/Button.scss
@@ -63,13 +63,23 @@
     font-size: 14px;
     font-family: inherit;
     color: #fff;
-    width: 8em;
-    height: 2.6em;
+    width: 7em;
+    height: 2em;
     text-align: center;
-    background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+    background: rgb(0, 113, 168);
+    background: linear-gradient(
+        94deg,
+        rgba(0, 113, 168, 1) 0%,
+        rgba(7, 142, 170, 1) 49%,
+        rgba(14, 167, 171, 1) 100%
+    );
     background-size: 300%;
-    border-radius: 30px;
+    border-radius: 5px;
     z-index: 1;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
 
 .button2:hover {
@@ -83,7 +93,7 @@
     }
 
     100% {
-        background-position: 400%;
+        background-position: 200%;
     }
 }
 
@@ -95,21 +105,33 @@
     right: -5px;
     bottom: -5px;
     z-index: -1;
-    background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+    background: rgb(0, 113, 168);
+    background: linear-gradient(
+        94deg,
+        rgba(0, 113, 168, 1) 0%,
+        rgba(7, 142, 170, 1) 49%,
+        rgba(14, 167, 171, 1) 100%
+    );
     background-size: 400%;
-    border-radius: 35px;
+    border-radius: 5px;
     transition: 1s;
-    -webkit-border-radius: 35px;
-    -moz-border-radius: 35px;
-    -ms-border-radius: 35px;
-    -o-border-radius: 35px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
 
 .button2:hover::before {
-    filter: blur(400px);
-    -webkit-filter: blur(400px);
+    filter: blur(1px);
+    -webkit-filter: blur(1px);
 }
 
 .button2:active {
-    background: linear-gradient(32deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+    background: rgb(0, 113, 168);
+    background: linear-gradient(
+        94deg,
+        rgba(0, 113, 168, 1) 0%,
+        rgba(7, 142, 170, 1) 49%,
+        rgba(14, 167, 171, 1) 100%
+    );
 }
