--- a/src/assets/css/Button.scss
+++ b/src/assets/css/Button.scss
@@ -61,15 +61,22 @@
 }
 
 /* From cssbuttons.io by @kirzin */
+// cara manggil
+// export const button2 = () => {
+//     return <button className="button2 "> Follow Us</button>;
+// };
 .button2 {
+    font-family: "Raleway", sans-serif;
+    font-weight: 500;
+    letter-spacing: 0.5px;
     text-decoration: none;
     position: relative;
     border: none;
-    font-size: 14px;
+    font-size: 15px;
     font-family: inherit;
     color: #fff;
     width: 7em;
-    height: 2em;
+    height: 2.2em;
     text-align: center;
     background: rgb(0, 113, 168);
     background: linear-gradient(
@@ -86,11 +93,6 @@
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
 }
-
-// cara manggil
-// export const button2 = () => {
-//     return <button className="button2 "> Follow Us</button>;
-// };
 
 .button2:hover {
     animation: ani 8s linear infinite;
