--- a/src/component/gallery/Gallery.scss
+++ b/src/component/gallery/Gallery.scss
@@ -46,7 +46,7 @@
     background: rgba(85, 98, 112, 0.6);
 }
 .portfolio .portfolio-wrap::before {
-    // content: "";
+    content: "";
     background: rgba(85, 98, 112, 0.6);
     position: absolute;
     left: 0;
