--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -5,3 +5,35 @@
     height: 30vh;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='350' preserveAspectRatio='none' viewBox='0 0 1440 350'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1157%26quot%3b)' fill='none'%3e%3crect width='1440' height='350' x='0' y='0' fill='rgba(242%2c 242%2c 242%2c 1)'%3e%3c/rect%3e%3cpath d='M 0%2c40 C 96%2c55 288%2c115 480%2c115 C 672%2c115 768%2c40.6 960%2c40 C 1152%2c39.4 1344%2c97.6 1440%2c112L1440 350L0 350z' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/path%3e%3cpath d='M 0%2c169 C 96%2c174.2 288%2c199.8 480%2c195 C 672%2c190.2 768%2c139.8 960%2c145 C 1152%2c150.2 1344%2c205.8 1440%2c221L1440 350L0 350z' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/path%3e%3cpath d='M 0%2c235 C 96%2c247 288%2c292.4 480%2c295 C 672%2c297.6 768%2c240.4 960%2c248 C 1152%2c255.6 1344%2c316 1440%2c333L1440 350L0 350z' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1157'%3e%3crect width='1440' height='350' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
 }
+
+.footer .footer-link {
+    ul {
+        margin-left: -30px;
+        list-style-type: none;
+        margin-right: 1;
+    }
+    .footer-social {
+        line-height: 30px;
+        margin-right: 20px;
+    }
+    .footer-social-text {
+        line-height: 30px;
+    }
+    .footer-icon-social {
+        margin-left: -8px;
+    }
+    .footer-icon-social i {
+        font-size: 35px;
+        color: #6c757d;
+    }
+    .footer-icon-social i:hover {
+        font-size: 35px;
+        color: rgb(0, 113, 168);
+        color: linear-gradient(
+            94deg,
+            rgba(0, 113, 168, 1) 0%,
+            rgba(7, 142, 170, 1) 49%,
+            rgba(14, 167, 171, 1) 100%
+        );
+    }
+}
