--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,30 @@ h4 {
     font-weight: 700;
 }
 
+.header-kegiatan .section-separator {
+    width: 100%;
+    position: relative;
+    margin: 20px 0;
+}
+.header-kegiatan .section-separator:before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 0;
+    height: 3px;
+    width: 50px;
+    border-radius: 3px;
+    z-index: 2;
+    background: rgb(0, 113, 168);
+    background: linear-gradient(
+        94deg,
+        rgba(0, 113, 168, 1) 0%,
+        rgba(7, 142, 170, 1) 49%,
+        rgba(14, 167, 171, 1) 100%
+    );
+    margin-left: -25px;
+}
+
 .visi li,
 p {
     font-family: "Open Sans", sans-serif;
