--- a/src/component/kegiatan/Kegiatan.scss
+++ b/src/component/kegiatan/Kegiatan.scss
@@ -7,7 +7,7 @@
     #kegiatan .carousel-inner {
         display: flex;
     }
-    #introCarousel {
+    #kegiatan {
         margin-top: -58.59px;
     }
 }
@@ -36,19 +36,67 @@
     box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
     border: none;
 }
-#kegiatan .carousel-control-prev,
-#kegiatan .carousel-control-next {
-    background-color: #d0d6fa;
-    width: 6vh;
-    height: 6vh;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
+
+#kegiatan .carousel-inner .active,
+#kegiatan .carousel-inner .carousel-item-next.carousel-item-start,
+#kegiatan .carousel-inner .carousel-item-prev.carousel-item-end {
+    opacity: 1;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
 }
+#kegiatan .carousel-inner .carousel-item-next,
+#kegiatan .carousel-inner .carousel-item-prev,
+#kegiatan .carousel-inner .active.carousel-item-start,
+#kegiatan .carousel-inner .active.carousel-item-end {
+    left: 0;
+    transform: translate3d(0, 0, 0);
+}
+#kegiatan .carousel-control-next-icon,
+#kegiatan .carousel-control-prev-icon {
+    background: none;
+    font-size: 30px;
+    line-height: 0;
+    width: auto;
+    height: auto;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 50px;
+    transition: 0.3s;
+    color: rgba(255, 255, 255, 0.5);
+    width: 54px;
+    height: 54px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#kegiatan .carousel-control-next-icon:hover,
+#kegiatan .carousel-control-prev-icon:hover {
+    background: rgba(255, 255, 255, 0.3);
+    color: rgba(255, 255, 255, 0.8);
+}
+
+@media (min-width: 1024px) {
+    #kegiatan .carousel-control-prev,
+    #kegiatan .carousel-control-next {
+        width: 5%;
+    }
+}
+
+// #kegiatan .carousel-control-prev,
+// #kegiatan .carousel-control-next {
+//     background-color: #d0d6fa;
+//     width: 6vh;
+//     height: 6vh;
+//     border-radius: 50%;
+//     top: 50%;
+//     transform: translateY(-50%);
+//     -webkit-border-radius: 50%;
+//     -moz-border-radius: 50%;
+//     -ms-border-radius: 50%;
+//     -o-border-radius: 50%;
+// }
 #kegiatan .card .img-wrapper {
     max-width: 100%;
     height: 13em;
