--- a/src/assets/scss/Button.scss
+++ b/src/assets/scss/Button.scss
@@ -24,6 +24,10 @@
     -moz-transition: color 0.5s;
     -ms-transition: color 0.5s;
     -o-transition: color 0.5s;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
 }
 
 .button1:before {
