--- a/src/assets/scss/Hcontent.scss
+++ b/src/assets/scss/Hcontent.scss
@@ -7,7 +7,7 @@
 }
 
 #introCarousel .carousel-item:nth-child(1) {
-    background-image: url("../../assets/img/BG.jpg");
+    background-image: url("../../assets/img/background1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -21,14 +21,14 @@
 }
 
 #introCarousel .carousel-item:nth-child(3) {
-    background-image: url("../../assets/img/profil.jpeg");
+    background-image: url("../../assets/img/tempat_manggala_pustaka.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
 }
 
 #introCarousel .carousel-item:nth-child(4) {
-    background-image: url("../../assets/img/bg2.jpg");
+    background-image: url("../../assets/img/background2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
