update style login register

--- a/src/assets/scss/Admin/Login.scss
+++ b/src/assets/scss/Admin/Login.scss
@@ -1,4 +1,4 @@
-.register-content {
+.login-content {
     input {
         border: none;
     }
@@ -8,7 +8,7 @@
         -moz-border-radius: 10px;
         -ms-border-radius: 10px;
         -o-border-radius: 10px;
-}
+    }
     .input-group {
         border: none;
         border-bottom: 1px solid rgba(175, 170, 170, 0.788);
